--- a/client/src/css/board.module.css
+++ b/client/src/css/board.module.css
@@ -1,20 +1,10 @@
-﻿.boardMainContainer {
-    position: relative;
-    width: 1200px;
-    height: 688px;
-    background-color: gray;
-}
-
-.boardContainer {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+﻿.boardContainer {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
     margin: auto;
-    width: 1100px;
-    height: 588px;
-    background-color: #b6ff00;
+    background-color: #c9c9c9;
+    transition: all 2s ease-in-out;
 }
 
 .newBoard {
@@ -24,14 +14,15 @@
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 15px;
-    background-color: #ff6a00;
+    background-color: #36b03c;
     line-height: 100px;
     text-align: center;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .newBoard:hover {
-    background-color: #ff8731;
+    background-color: #3abd41;
 }
 
 .board {
@@ -40,19 +31,21 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
-    background-color: gray;
+    background-color: #4868b0;
     line-height: 100px;
     text-align: center;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .board:hover {
-    background-color: #b9b9b9;
+    background-color: #4c75b5;
 }
 
 .title {
     margin: 0;
-    cursor: pointer;
+    animation-duration: 0.2s;
+    animation-name: test;
 }
 
 .board h1 {
@@ -60,7 +53,6 @@
     margin: 0;
     margin-left: 15px;
     text-align: left;
-    cursor: pointer;
 }
 
 .board img {
