--- a/client/src/css/alert.module.css
+++ b/client/src/css/alert.module.css
@@ -28,6 +28,7 @@
 /*^^^^ ABSOLUTNIE DO POPRAWKI!!!*/
 
 .text {
+    color: black;
     font-size: 20px;
     text-align: center;
     padding-left: 20px;
