• Zamieniłem przycisk „Wstań” na wstępną grafikę. Zawsze coś lepiej wygląda niż zwykły guzik aczkolwiek wciąż wygląda to źle. • Odcień szarości przy nieaktywnej kolumnie w tabeli jest nieco lżejszy. Nie wygląda tak topornie. • „Pozostały czas” zmienił się na ikonę emoji zegara. Czas jak i emoji jest większe i ma podkreślenie. • Wszystkie elementy w ustawieniach zostały pogrupowane na dwie kolumny. • Zmieniono „Spal stół” na „Usuń stół”. (Czuję, że mogłby ten button mieć lepszy tekst.) • Zarówno „Start!” jak i „Usuń stół” stylami pasują do przycisków na całej stronie. • Robocze informacje zostały przeniesione pod grę. • Drobne porządki w plikach CSS.

--- a/client/src/css/table.module.css
+++ b/client/src/css/table.module.css
@@ -7,11 +7,17 @@
     tr
 */
 
+.divTable {
+    float: left;
+    font-size: 20px;
+    width: 350px;
+}
 
 .table {
     border: none;
     border-collapse: collapse;
     cursor: default;
+    width: 100%; /*to tylko powoduje, że tabelka się nie przemieszcza o ten px, ale zmniejsza się canvas o px*/
 }
 
 .table thead tr:first-child {
@@ -48,10 +54,11 @@ table tr {
 
 .inActive {
     color: gray;
+    width: 69px;
 }
 
 .inActiveColumns {
-    background-color: #cacaca;
+    background-color: #e1e1e1;
 }
 
 .cell {
