--- a/client/src/css/global.module.css
+++ b/client/src/css/global.module.css
@@ -55,3 +55,21 @@
 .username:hover {
     cursor: default;
 }
+
+.footer {
+    width: 100%;
+    height: 40px;
+    background-color: #898989;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+.footer p {
+    font-size: 14px;
+    line-height: 40px;
+    margin-left: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
