--- a/client/src/css/chatbox.module.css
+++ b/client/src/css/chatbox.module.css
@@ -5,8 +5,46 @@
     width: 296px;
     height: 286px;
     border: 2px solid #595959;
+}
+
+.conversation {
+    width: 296px;
+    height: 236px;
     overflow-y: scroll;
 }
+
+.userInput {
+    width: 296px;
+}
+
+    .userInput input[type='text'] {
+        width: 250px;
+        height: 48px;
+        padding: 0 0 0 10px;
+        border-top: 2px solid #595959;
+        border-left: none;
+        border-right: none;
+        border-bottom: none;
+        background-color: inherit;
+    }
+
+        .userInput input:focus {
+            outline: none;
+        }
+
+    .userInput input[type='submit'] {
+        width: 36px;
+        line-height: 38px;
+        font-size: 48px;
+        margin: 0;
+        border-top: 2px solid #595959;
+        border-left: none;
+        border-right: none;
+        border-bottom: none;
+        float: right;
+        background-color: inherit;
+        cursor: pointer;
+    }
 
 .list {
     list-style-type: none;
@@ -21,6 +59,10 @@
     padding-right: 10px;
 }
 
-.alert:nth-child(2n+1) {
-    background-color: #898989;
+    .alert:nth-child(2n+1) {
+        background-color: #898989;
+    }
+
+.username {
+    font-style: italic;
 }
