--- a/client/src/css/scroll.module.css
+++ b/client/src/css/scroll.module.css
@@ -8,6 +8,11 @@
     background-color: rgba(0, 0, 0, 0.35);
 }
 
+/*.dummyThumb {
+    width: 100px;
+    background-color: yellow;
+}*/
+
 .thumb {
     position: relative;
     border-radius: 7px;
