--- a/client/src/css/games.module.css
+++ b/client/src/css/games.module.css
@@ -11,6 +11,10 @@
     border-radius: 0 10px 20px 10px;
     cursor: pointer;
     overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .tile img {
