--- a/client/src/css/global.module.css
+++ b/client/src/css/global.module.css
@@ -1,11 +1,5 @@
-﻿.container {
+﻿.header {
     display: flex;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
     height: 70px;
     justify-content: space-between;
     align-items: center;
@@ -33,10 +27,9 @@
     }
 
 .footer {
-    display: flex;
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    left: 0;
+    display: flex;
     width: 100%;
     height: 40px;
     background-color: #898989;
