--- a/client/src/css/game.module.css
+++ b/client/src/css/game.module.css
@@ -1,3 +1,6 @@
 .container {
-    width: 1200px;
+    display: flex;
+    justify-content: center;
+    /*flex-wrap: wrap;*/ /*divy wpadaj¹ jeden pod drugi*/
+    min-width: 1200px; /*przewijalne*/
 }
