--- a/client/src/css/global.module.css
+++ b/client/src/css/global.module.css
@@ -30,14 +30,16 @@
     position: absolute;
     bottom: 0;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 40px;
     background-color: #898989;
     color: white;
-    align-items: center;
 }
 
     .footer p {
         font-size: 14px;
         margin-left: 10px;
+        margin-right: 10px;
     }
