update v0.53 - Dodano podstronę profilu użytkownika. - Dodano dwa nowe komponenty – SaveButton i CancelButton. - Wyodrębniono przycisk powrotu na poprzednią stronę do osobnego komponentu BackButton. - BackButton nie przekierowuje teraz na stronę główną, a na poprzednią stronę. - Przycisk wyjdź w grze nie przekierowuje teraz do listy stołów, a na poprzednią stronę. - Poprawiono border-radius przycisku do tworzenia nowego stołu. - Zmieniono kolor diva z numerem stołu. - Dodano nowy skrypt validate.js. - Usunięto 7/8 kafelków WIP ze strony głównej. - Dodano użytkownika testowego (login i hasło są podane na stronie głównej). - Dodano README.MD - Poprawki w komponencie RegisterForm. - Poprawki w komponencie LoginForm. - Drobne poprawki w CSS.

--- a/client/src/css/board.module.css
+++ b/client/src/css/board.module.css
@@ -16,42 +16,18 @@
     gap: 10px;
 }
 
-.back {
-    width: 100px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
-    background-color: #fcb203;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-    .back:hover {
-        background-color: #fec20b;
-    }
-
-    .back img {
-        height: 30px;
-    }
-
 .newBoard {
     width: 350px;
     height: 100px;
     margin-bottom: 20px;
     background-color: #36b03c;
-    line-height: 100px;
-    text-align: center;
-    border-radius: 20px;
+    border-radius: 15px;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    text-align: center;
 }
 
     .newBoard:hover {
@@ -60,6 +36,7 @@
 
     .newBoard h1 {
         margin: 0;
+        line-height: 100px;  
     }
 
 .boardContainer {
@@ -78,7 +55,7 @@
     width: 350px;
     height: 100px;
     border-radius: 15px;
-    background-color: #1397b0;
+    background-color: #68E4fd;
 }
 
     .info h1 {
