--- a/client/src/css/tiles.module.css
+++ b/client/src/css/tiles.module.css
@@ -1,13 +1,17 @@
 ﻿.container {
-    width: 1110px;
-    height: 435px;
+    width: /*1110px*/ 760px;
+    height: 290px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: space-between;
+    /*justify-content: space-between;
+    align-content: space-between;*/
+}
+
+p {
+    font-size: 18px;
 }
 
 .tile {
@@ -20,13 +24,18 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    margin-left: 20px;
 }
 
-    .tile[name="WIP1"] {
+    .tile[name= "WORK IN PROGRESS"] {
+        border-radius: 0 0 20px 0;
+    }
+
+    .tile[name= "WIP1"] {
         border-radius: 0 0 20px 20px;
     }
 
-    .tile[name="WIP2"] {
+    .tile[name= "WIP2"] {
         border-radius: 0 0 0 20px;
     }
 
